# SmargGlassGUI

./: .gitignore  CMakeLists.txt  ColorCell.qml  ColorCellForm.ui.qml  ColorSlider.qml  ConfigPage.qml  ConfigPageForm.ui.qml  ConfigurationWindow.qml  ConfigurationWindowForm.ui.qml  GRTAGS_conflict-20171103-115416  GTAGS_conflict-20171103-115416  HomePage.qml  HomePageButton.qml  HomePageForm.ui.qml  LedButton.qml  LedButtonForm.ui.qml  LedConfigPage.qml  LedConfigPageForm.ui.qml  README.md  SliderWithLabel.qml  TimerDial.qml  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
cpp_src/: ProtocolFSM.cpp  ProtocolFSM.hpp  Protocol_MTs.h  Protocol_Packet.cpp  Protocol_Packet.hpp  backend.cpp  backend.h  crc.cpp  crc.h  utils.cpp  utils.h
cpp_src/protobuf/: Protocol_Commands.pb.cc  Protocol_Commands.pb.h  Protocol_Leds.pb.cc  Protocol_Leds.pb.h  fileconfig.pb.cc  fileconfig.pb.h
led_config_generator/: ProtocolPacket.py  Protocol_MTs.py  encode_leds_config.py  testScript.py  testScript_conflict-20171103-115416.py
led_config_generator/protobuf/: Protocol_Commands_pb2.py  Protocol_Leds_pb2.py  fileconfig_pb2.py
proto/: Protocol_Commands.proto  Protocol_Leds.proto  fileconfig.proto
python_test/: CRC16.py  testScript.py
python_test/protobuf/: Protocol_Leds_pb2.py
resources/: glass_image.xcf
